Adjust University Tuebingen reference in LegalNotice.html

--- a/user-interface/src/main/resources/impressum/LegalNotice.html
+++ b/user-interface/src/main/resources/impressum/LegalNotice.html
@@ -98,11 +98,11 @@
       target="_blank" rel="noopener noreferrer">UT Logo</a> by <a
       href="https://uni-tuebingen.de/en/"
                                                        class="text-underline font-size-sm"
-      target="_blank" rel="noopener noreferrer">University
+      target="_blank" rel="noopener noreferrer">University of
     Tuebingen</a>
     on <a
         href="https://uni-tuebingen.de/en/einrichtungen/verwaltung/stabsstellen/hochschulkommunikation/corporate-design-1/basiselemente/wort-bild-marke/varianten/"
-        class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">University
+        class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">University of
       Tuebingen</a>
   </p>
 
