Login Sites have the desired background image (#637)
* Provide background image and fix linkage to inclue noreferrer to avoid being blocked due to CORS policies

* Adjust University Tuebingen reference in LegalNotice.html

---------

Co-authored-by: Sven F <9976560+sven1103@users.noreply.github.com>

--- a/user-interface/src/main/resources/impressum/LegalNotice.html
+++ b/user-interface/src/main/resources/impressum/LegalNotice.html
@@ -22,69 +22,88 @@
 
   <h2 id="m169">Image credits</h2>
   <p>Image Sources and Copyright Notices: </p>
+  <p><a
+      href="https://www.freepik.com/free-vector/white-background-with-low-poly-digital-lines-connection_8562954.htm"
+      class="text-underline font-size-sm"
+      target="_blank" rel="noopener noreferrer">Application Background</a> by <a
+      href="https://www.freepik.com/author/starline"
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Starline</a> on
+    <a
+        href="https://www.freepik.com" class="text-underline font-size-sm" target="_blank"
+        rel="noopener noreferrer">Freepik</a></p>
   <p><a href="https://iconscout.com/free-icon/bacteria-4864120" class="text-underline font-size-sm"
-        target="_blank" rel="noopener">Bacteria</a> by <a
+        target="_blank" rel="noopener noreferrer">Bacteria</a> by <a
       href="https://iconscout.com/contributors/healthicons"
-      class="text-underline font-size-sm" target="_blank" rel="noopener">Daniel Burka</a> on
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Daniel Burka</a>
+    on
     <a
         href="https://iconscout.com" class="text-underline font-size-sm" target="_blank"
-        rel="noopener">IconScout</a></p>
+        rel="noopener noreferrer">IconScout</a></p>
   <p><a href="https://iconscout.com/free-icon/mouse-2221271" class="text-underline font-size-sm"
-        target="_blank" rel="noopener">Mouse</a> by <a
+        target="_blank" rel="noopener noreferrer">Mouse</a> by <a
       href="https://iconscout.com/contributors/iconsvalley"
-      class="text-underline font-size-sm" target="_blank" rel="noopener">Graphic Mall</a> on <a
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Graphic Mall</a>
+    on <a
       href="https://iconscout.com" class="text-underline font-size-sm" target="_blank"
-      rel="noopener">IconScout</a></p>
+      rel="noopener noreferrer">IconScout</a></p>
   <p><a href="https://iconscout.com/free-icon/mushroom-241" class="text-underline font-size-sm"
-        target="_blank" rel="noopener">Mushroom</a> by <a
+        target="_blank" rel="noopener noreferrer">Mushroom</a> by <a
       href="https://iconscout.com/contributors/jemismali"
-      class="text-underline font-size-sm" target="_blank" rel="noopener">Jemis Mali</a> on <a
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Jemis Mali</a>
+    on <a
       href="https://iconscout.com" class="text-underline font-size-sm" target="_blank"
-      rel="noopener">IconScout</a></p>
+      rel="noopener noreferrer">IconScout</a></p>
   <p><a href="https://iconscout.com/free-icon/kidneys-4864134" class="text-underline font-size-sm"
-        target="_blank" rel="noopener">Kidneys</a> by <a
+        target="_blank" rel="noopener noreferrer">Kidneys</a> by <a
       href="https://iconscout.com/contributors/healthicons"
-      class="text-underline font-size-sm" target="_blank" rel="noopener">Daniel Burka</a> on <a
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Daniel Burka</a>
+    on <a
       href="https://iconscout.com" class="text-underline font-size-sm" target="_blank"
-      rel="noopener">IconScout</a></p>
+      rel="noopener noreferrer">IconScout</a></p>
   <p><a href="https://iconscout.com/free-icon/liver-4864136" class="text-underline font-size-sm"
-        target="_blank" rel="noopener">Liver</a> by <a
+        target="_blank" rel="noopener noreferrer">Liver</a> by <a
       href="https://iconscout.com/contributors/healthicons"
-      class="text-underline font-size-sm" target="_blank" rel="noopener">Daniel Burka</a> on <a
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Daniel Burka</a>
+    on <a
       href="https://iconscout.com" class="text-underline font-size-sm" target="_blank"
-      rel="noopener">IconScout</a></p>
+      rel="noopener noreferrer">IconScout</a></p>
   <p><a href="https://iconscout.com/free-icon/heart-1963" class="text-underline font-size-sm"
-        target="_blank" rel="noopener">Heart</a> by <a
+        target="_blank" rel="noopener noreferrer">Heart</a> by <a
       href="https://iconscout.com/contributors/vector-stall"
-      class="text-underline font-size-sm" target="_blank" rel="noopener">Vector Stall</a> on <a
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Vector Stall</a>
+    on <a
       href="https://iconscout.com" class="text-underline font-size-sm" target="_blank"
-      rel="noopener">IconScout</a></p>
+      rel="noopener noreferrer">IconScout</a></p>
   <p><a href="https://iconscout.com/free-icon/leaf-3601970" class="text-underline font-size-sm"
-        target="_blank" rel="noopener">Leaf</a> by <a
+        target="_blank" rel="noopener noreferrer">Leaf</a> by <a
       href="https://iconscout.com/contributors/phosphoricons"
-      class="text-underline font-size-sm" target="_blank" rel="noopener">Phosphor Icons</a> on <a
+      class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">Phosphor
+    Icons</a> on <a
       href="https://iconscout.com" class="text-underline font-size-sm" target="_blank"
-      rel="noopener">IconScout</a></p>
+      rel="noopener noreferrer">IconScout</a></p>
   <p><a href="https://commons.wikimedia.org/wiki/File:ROR_logo.svg"
         class="text-underline font-size-sm"
-        target="_blank" rel="noopener">RoR Icon</a> by <a href="https://ror.org/"
+        target="_blank" rel="noopener noreferrer">RoR Icon</a> by <a href="https://ror.org/"
                                                           class="text-underline font-size-sm"
-                                                          target="_blank" rel="noopener">Research
+                                                                     target="_blank"
+                                                                     rel="noopener noreferrer">Research
     Organization
     Registry</a> on <a
       href="https://ror.readme.io/docs/display#ror-logo-files" class="text-underline font-size-sm"
-      target="_blank" rel="noopener">Research
+      target="_blank" rel="noopener noreferrer">Research
     Organization Registry</a></p>
   <p><a
       href="https://uni-tuebingen.de/fileadmin/Uni_Tuebingen/Allgemein/typo3zugriff/Corporate-Design/CD_Website/Logo/03-Wort-Bild-Marke-waagerecht/UT_WBMW_Rot_RGB.svg"
       class="text-underline font-size-sm"
-      target="_blank" rel="noopener">UT Logo</a> by <a href="https://uni-tuebingen.de/en/"
+      target="_blank" rel="noopener noreferrer">UT Logo</a> by <a
+      href="https://uni-tuebingen.de/en/"
                                                        class="text-underline font-size-sm"
-                                                       target="_blank" rel="noopener">University
+      target="_blank" rel="noopener noreferrer">University of
     Tuebingen</a>
     on <a
         href="https://uni-tuebingen.de/en/einrichtungen/verwaltung/stabsstellen/hochschulkommunikation/corporate-design-1/basiselemente/wort-bild-marke/varianten/"
-        class="text-underline font-size-sm" target="_blank" rel="noopener">University Tuebingen</a>
+        class="text-underline font-size-sm" target="_blank" rel="noopener noreferrer">University of
+      Tuebingen</a>
   </p>
 
   <p class="seal"><a href="https://datenschutz-generator.de/"
