Add link back to the data manager landing page

--- a/user-interface/src/main/resources/impressum/DataPrivacyAgreement.html
+++ b/user-interface/src/main/resources/impressum/DataPrivacyAgreement.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <body>
 <div>
+  <div>
+    <p>Back to QBiC's <a href="https://rdm.qbic.uni-tuebingen.de">Data Manager</a>.</p>
+  </div>
   <h1>Privacy Policy</h1>
   <h2 id="m4158">Preamble</h2>
   <p>With the following privacy policy we would like to inform you about the types of personal data
