--- a/user-interface/src/main/resources/impressum/LegalNotice.html
+++ b/user-interface/src/main/resources/impressum/LegalNotice.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <body>
 <div>
+  <div>
+    <p>Back to QBiC's <a href="https://rdm.qbic.uni-tuebingen.de">Data Manager</a>.</p>
+  </div>
   <h1>Legal Notice</h1>
   <h2 id="m46">Provider</h2>
   <p>University of Tübingen</p>
