--- a/user-interface/src/main/resources/impressum/DataPrivacyAgreement.html
+++ b/user-interface/src/main/resources/impressum/DataPrivacyAgreement.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>
+  Privacy policy of the data management platform of QBiC
+</title>
 <body>
 <div>
   <div>
